# kutana-ai

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .woodpecker.yml  ACTIVE_ISSUES.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  logo-prompt-ideas.md  mypy.ini  pyproject.toml  ruff.toml
.claude/agents/: convene-builder.md  convene-reader.md  kutana-builder.md  kutana-reader.md
.claude/rules/: architecture 2.md  architecture.md  database-migrations.md  dgx-connection 2.md  dgx-connection.md  documentation 2.md  documentation.md  eval-reports.md  external-docs.md  frontend.md  git-workflow 2.md  git-workflow.md  managed-agents.md  python 2.md  python.md  security.md  team-model.md  team-naming.md  zero-tolerance-errors.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a0b1c2d3e4f5_user_avatar_url.py  a1b2c3d4e5f6_agent_gateway_models.py  a2b3c4d5e6f7_meeting_owner_and_invites.py  b3c4d5e6f7a8_user_auth_and_api_keys.py  c4d5e6f7a8b9_api_key_expiry_and_audit_log.py  d5e6f7a8b9c0_agent_templates_and_hosted_sessions.py  e6f7a8b9c0d1_convene_feeds_tables.py  f7a8b9c0d1e2_user_billing_fields.py  g8b9c0d1e2f3_usage_records_table.py  h1a2b3c4d5e6_premium_template_data.py  h2b3c4d5e6f7_prompt_override_column.py  h3c4d5e6f7a8_integrations_table.py  i1a2b3c4d5e6_auth_security_columns.py  j2b3c4d5e6f7_managed_agents_schema.py  j2k3l4m5n6o7_hosted_session_summary.py  k3l4m5n6o7p8_participation_mode.py  l4m5n6o7p8q9_meeting_selected_templates.py  m5n6o7p8q9r0_hosted_session_error_detail.py  n6o7p8q9r0s1_meeting_is_test.py
charts/convene/: Chart.yaml  values.yaml
charts/kutana/: Chart.yaml  values.yaml
charts/registry/: Chart.yaml  values.yaml
charts/stt/: values.yaml
claude_docs/: DGX_Spark_Reference.md  DGX_Spark_SSH_Connection.md  UV_Best_Practices.md
deploy/: deploy-to-dgx.sh  dgx-logs.sh  dgx-pipeline-test.sh
docs/: HANDOFF.md  PIVOT_RECOMMENDATIONS.md  PROGRESS.md  README.md  SETUP_GUIDE.md  TASKLIST.md  TEST_PLAN_Auth_MCP_Frontend.md
docs/cowork-tasks/: README.md
evals/: CLAUDE.md  Dockerfile  __init__.py  conftest.py  e2e_runner.py  judge.py  k8s_runner.py  minio_client.py  mock_runner.py  models.py  test_basic_agents.py  test_business_agents.py  test_pro_agents.py
external-docs/: README.md
internal-docs/: README.md  tts-stt-deep-dive.md
internal-docs/examples/meeting-assistant-agent/: .env.example  agent.py  pyproject.toml
scripts/: build_and_push.sh  check_logs.py  connect.sh  demo_meeting_flow.py  install.sh  setup_managed_agents.py  stripe_setup.py  sync_agents.py  test_e2e_full_stack.py  test_e2e_gateway.py  test_whisper_direct.py  upload_eval_data.py
services/agent-gateway/: Dockerfile  pyproject.toml
services/agent-gateway/src/agent_gateway/: __init__.py  agent_session.py  audio_bridge.py  audio_router.py  audio_session.py  auth.py  chat_bridge.py  connection_manager.py  event_relay.py  human_session.py  insight_bridge.py  livekit_worker.py  main.py  protocol.py  settings.py  tts_bridge.py  turn_bridge.py
services/agent-gateway/tests/: conftest.py  test_audio_bridge.py  test_audio_router.py  test_audio_session.py  test_audio_sidecar.py  test_auth.py  test_capability_declaration.py  test_channel_subscribe.py  test_connection_manager.py  test_e2e_flow.py  test_event_relay_transcript.py  test_gateway_polish.py  test_livekit_integration.py  test_livekit_worker.py  test_protocol.py  test_tts_bridge.py
services/api-server/: Dockerfile  pyproject.toml
services/api-server/src/api_server/: __init__.py  agent_lifecycle.py  agent_presence_heartbeat.py  agent_registry.py  auth.py  auth_deps.py  billing_deps.py  deps.py  email.py  encryption.py  event_publisher.py  langfuse_client.py  main.py  managed_agent_activation.py  managed_agents.py  observability.py  rate_limit.py  request_id.py  slack_alerts.py  storage.py
services/api-server/src/api_server/routes/: agent_keys.py  agent_templates.py  agents.py  auth.py  billing.py  feeds.py  integrations.py  meetings.py  summaries.py  tasks.py  token.py  turns.py
services/api-server/src/api_server/services/: livekit_service.py
services/api-server/tests/: test_livekit_service.py  test_meetings_delete.py  test_meetings_livekit.py  test_task_events.py
services/audio-service/: Dockerfile  pyproject.toml
services/audio-service/src/audio_service/: __init__.py  audio_adapter.py  audio_pipeline.py  event_publisher.py  main.py
services/audio-service/tests/: test_audio_pipeline.py  test_deepgram_keepalive.py  test_redis_integration.py  test_stt_wiring.py  test_whisper_hallucination_filter.py
services/cli/: README.md  pyproject.toml
services/cli/src/convene_cli/: __init__.py  api.py  config.py  main.py
services/cli/src/kutana_cli/: __init__.py  api.py  auth.py  client.py  config.py  main.py  mcp_cmd.py  meetings.py  output.py  session.py  tasks.py  turns.py
services/cli/tests/: test_cli.py
services/mcp-server/: Dockerfile  pyproject.toml
services/mcp-server/src/mcp_server/: __init__.py  api_client.py  auth.py  gateway_client.py  main.py  settings.py
services/mcp-server/src/mcp_server/security/: __init__.py  audit.py  rate_limit.py  sanitization.py  scopes.py
services/mcp-server/tests/: test_channel_tools.py  test_chat_tools.py  test_security.py  test_summary_tools.py  test_turn_tools.py
services/task-engine/: Dockerfile  pyproject.toml
services/task-engine/src/task_engine/: __init__.py  deduplicator.py  event_publisher.py  extractor.py  main.py  stream_consumer.py  windower.py
services/task-engine/tests/: test_deduplicator.py  test_event_publisher.py  test_extractor.py  test_main.py  test_stream_consumer.py  test_windower.py
services/worker/: Dockerfile  pyproject.toml
services/worker/src/worker/: __init__.py  calendar_sync.py  feed_agent.py  feed_dispatcher.py  feed_runner.py  main.py  managed_agent.py  notifications.py  slack_bot.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+520 files in other folders)
