[project]
name = "kutana-ai"
version = "0.1.0"
description = "Agent-first meeting platform — AI agents connect via native API, humans join via WebRTC"
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "packages/kutana-core",
    "packages/kutana-providers",
    "packages/kutana-memory",
    "services/api-server",
    "services/audio-service",
    "services/agent-gateway",
    "services/mcp-server",
    "services/task-engine",
    "services/worker",
    "services/cli",
]

[tool.uv]
dev-dependencies = [
    "anthropic>=0.92.0",
    "boto3>=1.35",
    "groq>=0.11",
    "langfuse>=3.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.15.4",
    "sqlalchemy>=2.0.47",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib --ignore=evals"
markers = [
    "mock: Mock eval — system prompt + transcript through Messages API (no live cluster)",
    "e2e: End-to-end eval — runs against the live dev cluster",
]

[tool.hatch.build.targets.wheel]
packages = []
