[project]
name = "api-server"
version = "0.1.0"
description = "FastAPI REST + WebSocket API for Convene AI"
requires-python = ">=3.12"
dependencies = [
    "convene-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic-settings>=2.0",
    "passlib[bcrypt]>=1.7",
    "PyJWT>=2.8",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
convene-core = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
