[project]
name = "audio-service"
version = "0.1.0"
description = "Audio pipeline and transport adapters for Kutana AI"
requires-python = ">=3.12"
dependencies = [
    "kutana-core",
    "kutana-providers",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5.0",
    "pydantic-settings>=2.0",
]

[tool.uv.sources]
kutana-core = { workspace = true }
kutana-providers = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/audio_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
