[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server exposing Convene AI tools for Claude and MCP clients"
requires-python = ">=3.12"
dependencies = [
    "convene-providers",
    "mcp[cli]>=1.0",
    "websockets>=13.0",
    "aiohttp>=3.9",
    "pydantic-settings>=2.0",
    "redis[asyncio]>=5.0",
]

[tool.uv.sources]
convene-providers = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
