[project]
name = "worker"
version = "0.1.0"
description = "Background worker service for Kutana AI"
requires-python = ">=3.12"
dependencies = [
    "kutana-core",
    "kutana-memory",
    "fastapi>=0.134",
    "uvicorn[standard]>=0.41",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "anthropic>=0.84.0",
]

[tool.uv.sources]
kutana-core = { workspace = true }
kutana-memory = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
